--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Mike Heroux Homepage"
 title_separator          : "-"
 name                     : &name "Michael A. Heroux"
-description              : &description "Senior Scientist, Scientist in Residence"
+description              : &description "Senior Scientist, Sandia National Labs; Scientist in Residence, St. John's University"
 url                      : https://maherou.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "maherou/maherou.github.io"
@@ -80,9 +80,9 @@ analytics:
 author:
   name             : "Michael A. Heroux"
   avatar           : "HerouxSpeaking.jpg"
-  bio              : "Senior Scientist, Sandia; Scientist in Residence, St. John's"
+  bio              : "Senior Scientist, Sandia National Laboratories; Scientist in Residence, St. John's University, MN"
   location         : "Avon, MN"
-  employer         : "Sandia National Labs; St. John's University"
+  employer         : "Sandia, St. John's"
   googlescholar    : "https://scholar.google.com/citations?user=3o3TleEAAAAJ&hl=en"
   email            : "maherou@sandia.gov"
   uri              :
