--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,11 @@ author:
   keybase          :
   instagram        :
   lastfm           :
-  linkedin         :
+  linkedin         :"https://www.linkedin.com/in/michael-heroux-763590/"
   orcid            : "http://orcid.org/0000-0002-5893-0273"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : "https://stackoverflow.com/users/4480512/michael-heroux"
   steam            :
   tumblr           :
   twitter          : #"replacethistwitterhandle"
