--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Pubs & Awards"
+  - title: "Publications"
     url: /publications/
 
   - title: "Events"
@@ -15,8 +15,8 @@ main:
   - title: "Blog"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "CV & Awards"
     url: /cv/
     
-  - title: "Guide"
-    url: /markdown/
+#  - title: "Guide"
+#    url: /markdown/
