--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   - title: "Events"
     url: /talks/    
 
-  - title: "Teaching-Service"
+  - title: "Teaching & Service"
     url: /teaching/    
     
   - title: "Projects"
