--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Publications & Awards"
     url: /publications/
 
   - title: "Events"
@@ -15,7 +15,7 @@ main:
   - title: "Blog"
     url: /year-archive/
     
-  - title: "CV & Awards"
+  - title: "CV"
     url: /cv/
     
 #  - title: "Guide"
